--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ Django==5.0.3
 django-filter==24.2
 djangorestframework==3.15.1
 Markdown==3.6
+mysqlclient==2.2.4
+pillow==10.2.0
 sqlparse==0.4.4
 typing_extensions==4.10.0
