feat: prepare user model for jwt auth

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,17 @@ venv/
 
 # environment variables
 main/.env
+
+main/__pycache__
+
+orders/__pycache__
+orders/migrations/__pycache__
+
+products/__pycache__
+products/migrations/__pycache__
+
+user/__pycache__
+user/migrations/__pycache__
+
+categories/__pycache__
+categories/migrations/__pycache__
