--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ orders/migrations/__pycache__
 products/__pycache__
 products/migrations/__pycache__
 
+payment/__pycache__
+payment/migrations/__pycache__
+
 user/__pycache__
 user/migrations/__pycache__
 
