--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.8.1
 Django==5.0.4
+django-cors-headers==4.3.1
 django-environ==0.11.2
 django-filter==24.2
+django-jazzmin==2.6.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 mysqlclient==2.2.4
@@ -9,4 +11,3 @@ pillow==10.2.0
 PyJWT==2.8.0
 sqlparse==0.4.4
 typing_extensions==4.10.0
-python-dotenv==1.0.1
