--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ django-filter==24.2
 django-jazzmin==2.6.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+gunicorn==21.2.0
 mysqlclient==2.2.4
+packaging==24.0
 pillow==10.2.0
 PyJWT==2.8.0
 sqlparse==0.4.4
