--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.8.1
 Brotli==1.1.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 Django==5.0.4
 django-cors-headers==4.3.1
 django-environ==0.11.2
@@ -8,10 +10,15 @@ django-jazzmin==2.6.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 gunicorn==21.2.0
+idna==3.7
 mysqlclient==2.2.4
 packaging==24.0
 pillow==10.2.0
 PyJWT==2.8.0
+python-dotenv==1.0.1
+requests==2.31.0
 sqlparse==0.4.4
+stripe==9.1.0
 typing_extensions==4.10.0
+urllib3==2.2.1
 whitenoise==6.6.0
